# zd

./: .gitignore  .poetry.lock.sha512  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json
shu/: author.py  book.py  cli.py  client.py  series.py
shu/source/: douban.py
tests/: test_douban.py
tests/douban/: poe.html
zd/: actions.py  author.py  book.py  calibre.py  cli.py  client.py  douban.py  fav_list.py  movie.py  music.py  person.py  repo.py  series.py  store.py  utils.py
