[tool.poetry]
name = "shu"
version = "0.1.0"
description = ""
authors = ["Jianwei Han <hanjianwei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
parsel = "^1.7.0"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
coverage = "^7.1.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.1.20"
mypy = "^0.991"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
